# OSCPS

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json
.github/workflows/: check-docs.yml  create-doc-pages.yml  release.yml  rust-tests.yml
oscps-cli/: Cargo.toml
oscps-cli/src/: main.rs
oscps-db/: Cargo.toml
oscps-db/src/: lib.rs  postgres_db.rs  properties_db.rs
oscps-gui/: Cargo.toml  bun.lockb  package.json
oscps-gui/src/: bezier.rs  flowsheet.rs  main.rs  style.rs
oscps-gui/src-tauri/: Cargo.toml  tauri.conf.json
oscps-gui/src-tauri/src/: main.rs
oscps-lib/: Cargo.toml
oscps-lib/src/: blocks.rs  component.rs  connector.rs  lib.rs  properties.rs  simulation.rs  stream.rs  thermodynamics.rs
oscps-lib/src/properties/: pure_species_properties.rs
oscps-lib/src/thermodynamics/: cubic.rs  eos_models.rs  ideal.rs  ideal_gas_package.rs  srk_package.rs
oscps-lib/src/thermodynamics/ideal/: base_ideal_eos.rs  walkermodel_ideal_eos.rs
