[package]
name = "oscps-gui"
version = "0.1.0"
authors = ["Nathaniel Thomas <nathaniel@swbell.net>", "Bhargav Akula <bhargavakula01>"]
edition = "2021"

[dependencies]
env_logger = "0.11.6"
iced = { version = "0.13.1", features = ["advanced", "canvas", "debug", "lazy"] }
log = "0.4"
oscps-lib = { path = "../oscps-lib" }
strum = "0.27.1"
strum_macros = "0.27.1"
