[package]
name = "oscps-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
uom  = "0.36.0"
once_cell = "1.17.1"
pubchem = "0.1.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
